syntax = "proto3";
option java_multiple_files = true;
package com.example.grpc.server.grpcserver.realtor;

message ProtoRealtor {
    string name = 1;
    string surname = 2;
}

message DeleteRequest {
    string id = 1;
}

message DeleteResponse {
    string report = 1;
}

message GetRequest {
}

message GetResponse {
    repeated ProtoRealtor realtors = 1;
}

message CreateRequest {
	ProtoRealtor realtors = 1;
}

message CreateResponse {
    string id = 1;
}

service RealtorService {
    rpc get(GetRequest) returns (GetResponse);
    rpc delete(DeleteRequest) returns (DeleteResponse);
    rpc create(CreateRequest) returns (CreateResponse);
}